--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "lucide-react": "^0.552.0",
+    "oidc-client-ts": "^3.3.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-oidc-context": "^3.3.0",
     "react-router-dom": "^7.9.1",
     "recharts": "^3.3.0"
   },
