--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "vitest run",
-    "test:coverage": "vitest run --coverage"
+    "test": "vitest --run --reporter=dot",
+    "test:ci": "vitest --run --coverage --reporter=dot"
   },
   "dependencies": {
     "axios": "^1.12.2",
