--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,50 +1,61 @@
-name: Frontend CI
+name: Frontend CI/CD
 
 on:
-  pull_request:
-    branches: [dev, main]
   push:
-    branches: [dev]
-
-permissions:
-  contents: read
+    branches:
+      - main
 
 jobs:
-  ci:
+  build-test-analyze-deploy:
     runs-on: ubuntu-latest
-    timeout-minutes: 15
 
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Node
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          cache: 'npm'
+          node-version: 20
 
-      - name: Install
+      - name: Install dependencies
         run: npm ci
 
-      - name: Prepare env for CI
-        run: cp .env.test .env
+      - name: Run Vitest unit tests
+        run: npm test
 
-      - name: Lint
-        run: npm run lint
+      - name: SonarQube Scan
+        uses: SonarSource/sonarcloud-github-action@v2
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          args: >
+            -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
+            -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION_KEY }}
+            -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }}
+            -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
 
-      - name: Prettier check (optional)
-        run: npx prettier -c .
-
-      - name: Tests (coverage)
-        run: npm run test:coverage
-
-      - name: Build
+      - name: Build project
         run: npm run build
 
-      - name: Upload dist
-        uses: actions/upload-artifact@v4
+      - name: Deploy to S3
+        uses: aws-actions/s3-sync@v1
         with:
-          name: dist
-          path: dist
-          retention-days: 7
+          args: --delete
+        env:
+          AWS_S3_BUCKET: tendertool-site
+          AWS_REGION: af-south-1
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        run: |
+          aws s3 sync ./dist s3://tendertool-site --region af-south-1 --delete
+
+      - name: Invalidate CloudFront cache
+        run: |
+          aws cloudfront create-invalidation \
+            --distribution-id E3R5BRK1RTZIQH \
+            --paths "/*"
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: af-south-1
