--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
     "preview": "vite preview",
-    "test": "vitest --run --reporter=dot",
+    "test": "vitest --run",
     "test:ci": "vitest --run --coverage --reporter=dot"
   },
   "dependencies": {
@@ -34,7 +33,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.4.0",
-    "jsdom": "^27.1.0",
+    "jsdom": "^22.1.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18",
     "vite": "^7.1.6",
